# switch-to-airos

./: .eslintrc.json  README.md  package-lock.json  package.json
locales/: en.json
src/: App.tsx  i18n.ts  main.tsx  styles.css
src-rust/: Cargo.toml  tauri.conf.json
src-rust/capabilities/: default.json
src-rust/icons/: icon.icns
src-rust/src/: create_magic_folder.rs  diskpart.rs  download.rs  load_apps.rs  main.rs  whoami.rs  write.rs
src-rust/src/requirements/: check_freespace.rs  check_uefi.rs
src/assets/: mirrors.ts
src/components/: AppDetection.tsx  BetaWarning.tsx  CheckResults.tsx  FilesToMove.tsx  InstallMethods.tsx  Installing.tsx  Requirements.tsx  Requirments.tsx  Summary.tsx  Welcome.tsx
src/components/elements/: Button.tsx
src/state/: appState.ts  componentState.tsx
