[package]
name = "switch-to-airos"
version = "1.0.0"
description = "Switch to Airos"
authors = ["Oskar Nizioł <oskarniziol@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.0.0-beta.3"
tauri-plugin-os = "2.0.0-beta.3"

